# litverify-ai

./: .dockerignore  .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  start_server.py
.streamlit/: config.toml
config/: __init__.py  prompts.py  rules_default.yaml  settings.py
db/: __init__.py  history.py  schema.sql
llm/: __init__.py  deepseek_client.py  insight_generator.py  ocr_extractor.py  text_utils.py
services/: __init__.py  _client_base.py  agent_router.py  api_errors.py  arxiv_client.py  citation_parser.py  citation_verifier.py  crossref_client.py  data_loader.py  data_processor.py  datacite_client.py  dblp_client.py  doidb_client.py  exporter.py  fake_analyzer.py  openalex_client.py  pubmed_client.py  rule_engine.py  semantic_scholar_client.py  wanfang_client.py
tests/: test_chart_code.py  test_chat_store.py  test_crossref.py  test_data_loader.py  test_data_loader_more.py  test_external_clients.py  test_new_features.py  test_parser.py  test_rule_engine.py  test_verifier.py
ui/: __init__.py  _scripts.py  chat_shell.py  components.py  rail.py  settings_dialog.py  sidebar.py  theme.css  theme.py  verdict_card.py
utils/: __init__.py  cache.py  dataframe.py  doi_utils.py  session.py  text_similarity.py
