[project]
name = "litverify-ai"
version = "0.1.0"
description = "LitVerify AI: academic citation verification agent with rules, external evidence and DeepSeek explanations."
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
